--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="backdrop-hook"></div>
+    <div id="modal-hook"></div>
+    <div id="drawer-hook"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -39,5 +42,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBriCEfk531A2J4xTs26-2rUfRojihfPMU&libraries=marker&loading=async"
+  async
+  defer
+></script>
+
+
   </body>
 </html>
+<!-- AIzaSyBriCEfk531A2J4xTs26-2rUfRojihfPMU -->
